# boilerplate

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  components.json  eslint.config.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.js  vite.config.ts
dockerfiles/: docker-compose.yml
dockerfiles/nginx/: Dockerfile  Dockerfile.dockerignore
public/css/: main.css
scripts/: django_checks.sh  rename.sh
src/accounts/: admin.py  choices.py  models.py  urls.py
src/accounts/api/: serializers.py  urls.py  viewsets.py
src/accounts/api/serializers/: __init__.py  account.py  core.py
src/accounts/api/tests/: test_signup.py
src/accounts/migrations/: 0001_initial.py  0002_organization_alter_profile_options_and_more.py
src/accounts/tests/: factories.py
src/boilerplate/: settings.py  urls.py
src/common/api/tests/: base.py
src/frontend/: App.jsx  App.tsx  main.jsx  main.tsx  routeTree.gen.ts
src/frontend/components/forms/: Login.tsx  Signup.tsx
src/frontend/pages/: Signup.tsx
src/frontend/pages/auth/: Login.tsx
src/frontend/routes/: Login.tsx  Signup.tsx  __root.tsx
src/templates/: index.html
