[project]
name = "boilerplate"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Waqar Ali", email = "waqar_se@outlook.com"},
]
dependencies = [
    "django>=5.1.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
